completed the testing of the alert controller and the interaction with redis